--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,17 @@ body {
   color: #28324B;
 }
 
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 .container {
   margin: 0 auto;
   width: 95%;
@@ -182,7 +193,10 @@ header {
   border: 1px solid #788CBD;
   border-radius: 40px;
   padding: 8px 20px;
-  margin-bottom: 20px;
+}
+
+.enquiry-box.error {
+  border-color: #C94D4D;
 }
 
 .enquiry-box input, .enquiry-box button {
@@ -195,6 +209,13 @@ header {
   padding: 8px 0;
   font-size: 16px;
   color: #788CBD;
+  outline: none;
+}
+
+.enquiry-box span {
+  display: none;
+  font-size: 22px;
+  color: #2BAA33;
 }
 
 .enquiry-box input::placeholder {
@@ -204,6 +225,18 @@ header {
 .enquiry-box button {
   color: #ffffff;
   font-size: 30px;
+  cursor: pointer;
+}
+
+.enquiry-box-error {
+  color: #C94D4D;
+  padding-left: 20px;
+  height: 20px;
+  visibility: hidden;
+}
+
+.enquiry-box-error.visible {
+  visibility: visible;
 }
 
 .social {
@@ -297,8 +330,9 @@ header {
 }
 
 .book p {
-  font-size: 12px;
+  font-size: 14px;
   color: #999999;
+  padding-bottom: 8px;
 }
 
 .book > div {
@@ -312,14 +346,37 @@ header {
   border-top: 1px solid #999999;
 }
 
-.book input {
+.book input, .book select {
   border: 1px solid #bbbbbb;
-  padding: 8px;
+  padding: 8px 16px;
   font-size: 16px;
   color: #28324B;
   width: 100%;
   margin-top: 4px;
   margin-bottom: 12px;
+  border-radius: 20px;
+}
+
+.book input.error, .book select.error {
+  border-color: #C94D4D;
+}
+
+.book select {
+  appearance: none;
+  color: #777777;
+}
+
+.bike-model-select {
+  position: relative;
+}
+
+.bike-model-select::after {
+  content: '';
+  position: absolute;
+  top: 20px;
+  right: 10px;
+  border: 6px solid transparent;
+  border-color: #777777 transparent transparent transparent
 }
 
 .book button {
@@ -337,6 +394,41 @@ header {
   border-color: #ffffff;
 }
 
+.book button {
+  position: relative;
+}
+
+.book button.loading {
+  color: #2BAA33;
+}
+
+.book button.loading::after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 45%;
+  height: 20px;
+  width: 20px;
+  border: 2px solid #ffffff;
+  border-left-color: transparent;
+  border-radius: 50%;
+  animation: loading 0.7s infinite linear;
+}
+
+.book button.test-drive-submit.loading {
+  color: #ffffff;
+}
+
+.book button.test-drive-submit.loading::after {
+  border: 2px solid #28324B;
+  border-left-color: transparent;
+}
+
+.book span {
+  color: #2BAA33;
+  display: block;
+  display: none;
+}
 
 /*offer*/
 .offer {
